force-app/main/default/objects/Route_Plan__c/Route_Plan__c.object-meta.xml
<CustomObject>
    <label>Route Plan</label>
    <pluralLabel>Route Plans</pluralLabel>
    <description>Route Plan</description>
    <nameField>
        <label>Route Plan Name</label>
        <type>AutoNumber</type>
        <displayFormat>RTE-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>