force-app/main/default/objects/Route_Plan__c/fields/Optimized__c.field-meta.xml
<CustomField>
    <fullName>Optimized__c</fullName>
    <label>Optimized</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Optimized</description>
</CustomField>