force-app/main/default/objects/Route_Plan__c/fields/Sales_Beat__c.field-meta.xml
<CustomField>
    <fullName>Sales_Beat__c</fullName>
    <label>Sales Beat</label>
    <type>Lookup</type>
    <referenceTo>Sales_Beat__c</referenceTo>
    <relationshipLabel>Route Plans</relationshipLabel>
    <relationshipName>Route_Plans</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Beat</description>
</CustomField>