force-app/main/default/objects/Route_Plan__c/fields/Sequence_Json__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Json__c</fullName>
    <label>Sequence Json</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Sequence Json</description>
</CustomField>